--- a/templates/login.html
+++ b/templates/login.html
@@ -66,6 +66,18 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <h2 class="text-uppercase">Log in</h2>
+              <div class="flash">
+                {% with messages = get_flashed_messages() %} {% if messages %}
+
+                <ul>
+                  {% for message in messages %}
+                  <li>
+                    <strong> {{ message }} </strong>
+                  </li>
+                  {% endfor %}
+                </ul>
+                {% endif %} {% endwith %}
+              </div>
               <h3>You can use your Google credentials to log in.</h3>
               <br />
               <div class="processimg">
