feat: include styles/credits

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,11 @@
 <!-- Footer -->
-<footer>
+<footer class="bg-secondary">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <span class="copyright">Copyright &copy; Bowls 101 2019</span>
+        <span class="copyright" style="color:cornsilk"
+          >Copyright &copy; Bowls 101 2019</span
+        >
       </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
@@ -36,11 +38,11 @@
       </div>
     </div>
   </div>
-  <div>
-    <span class="copyright">
+  <div style="margin-top:10px">
+    <span class="copyright" style="font-size:1ex">
       Photos by Anna Pelzer, Dan Gold, Edgar Castrejon, Ella Olsson, Jez Timms,
-      Kai Pilger, Mariana Medvedeva, Milada Vigerova, rawpixel, Tom Hermans on
-      Unsplash
+      Kai Pilger, Mariana Medvedeva, Milada Vigerova, rawpixel, Jose Aragones,
+      Tom Hermans on Unsplash
     </span>
   </div>
 </footer>
