fix: Fixing error 404 Google Sign In

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -54,8 +54,29 @@
     <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
-    <script src="//apis.google.com/js/platform.js?onload=start"></script>
+    <script
+      src="https://apis.google.com/js/client:platform.js?onload=start"
+      async
+      defer
+    ></script>
     <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+    <script>
+      function start() {
+        gapi.load("auth2", function() {
+          auth2 = gapi.auth2.init({
+            client_id: "{{client_id}}",
+            scope: "openid email",
+            redirecturi: "postmessage",
+            accesstype: "offline",
+            cookiepolicy: "single_host_origin",
+            callback: "signInCallback",
+            approvalprompt: "force"
+            // Scopes to request in addition to 'profile' and 'email'
+            //scope: 'additional_scope'
+          });
+        });
+      }
+    </script>
   </head>
 
   <body id="page-top">
@@ -87,18 +108,14 @@
                   style="width:100%"
                 />
               </div>
-              <div id="signinButton">
-                <span
-                  class="g-signin"
-                  data-scope="openid email"
-                  data-clientid="{{ client_id }}"
-                  data-redirecturi="postmessage"
-                  data-accesstype="offline"
-                  data-cookiepolicy="single_host_origin"
-                  data-callback="signInCallback"
-                  data-approvalprompt="force"
-                >
-                </span>
+              <div id="signinButtonDiv">
+                <button id="signinButton">Sign in with Google</button>
+                <script>
+                  $("#signinButton").click(function() {
+                    // signInCallback defined in step 6.
+                    auth2.grantOfflineAccess().then(signInCallback);
+                  });
+                </script>
               </div>
             </div>
             <div style="margin-top:100px; padding: 16px">
@@ -147,5 +164,4 @@
       }
     </script>
     <!--END GOOGLE PLUS SIGN IN BUTTON -->
-  </body>
 </html>
