--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-4">
         <span class="copyright" style="color:cornsilk"
-          >Copyright &copy; Bowls 101 2019</span
+          >Copyright &copy; Mostly Plants 101 2019</span
         >
       </div>
       <div class="col-md-4">
