--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Bowls 101</title>
+  <title>Mostly Plants 101</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Welcome!</div>
-        <div class="intro-heading text-uppercase">Bowls 101</div>
+        <div class="intro-heading text-uppercase">Mostly Plants 101</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
       </div>
     </div>
@@ -57,8 +57,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Bowls 101</h2>
-          <p >Bowls 101 has been created to promote a healthier alimentation by teaching you how to make a bowl with a variety of ingredients that you probably have at home.</p>
+          <h2 class="section-heading text-uppercase">Mostly Plants 101</h2>
+          <p >Mostly Plants has been created to promote a healthy diet by teaching you how to make a bowl with a variety of ingredients that you probably have at home.</p>
           <p>Take a look at your cupboard and sign up to start!</p>
           <p>Once you have created an account you will be able to make bowls and save them for the future.</p>
         </div>
