--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Bowls 101</title>
+    <title>Mostly Plants 101</title>
 
     <!-- Bootstrap core CSS -->
     <link
