--- a/templates/navigationBar.html
+++ b/templates/navigationBar.html
@@ -41,7 +41,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">Bowls 101</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">Mostly Plants 101</a>
     <button
       class="navbar-toggler navbar-toggler-right"
       type="button"
