style: create style to apply top and bottom margins

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -459,3 +459,8 @@ ul.social-buttons li a:focus,
 ul.social-buttons li a:hover {
   background-color: #fed136;
 }
+
+.top-bottom-margins {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
