--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
 
 <!-- Custom scripts for this template -->
 <script src="{{url_for('static',filename='js/styles.min.js')}}"></script>
-
+<script src="{{url_for('static',filename='js/nutrition_data.js')}}"></script>
 </body>
 
 </html>
