feat: use standar nutrition language

--- a/templates/editBowl.html
+++ b/templates/editBowl.html
@@ -25,7 +25,7 @@
 
           </div>
         </div>
-        <h5>Nutrition information</h5>
+        <h5>Nutrition Facts</h5>
         <div id="console-ingredients" class="input-group col-auto mb-2 bg-light">
             <label class="col-form-label" for="calories">Calories:</label>
             <input type="text" readonly class="form-control-plaintext text-info mb-2" id="calories" name="calories" value="{{ bData.calories }}">
