--- a/templates/makeBowl.html
+++ b/templates/makeBowl.html
@@ -7,7 +7,7 @@
   </head>
     <form id="regForm" action="{{ url_for('makebowl') }}" method="post" >
       <h1>Make a new bowl</h1>
-      <h5>Nutrition information</h5>
+      <h5>Nutrition Facts</h5>
       <div id="console-ingredients" class="input-group col-auto mb-2 bg-light">
           <label class="col-form-label" for="calories">Calories:</label>
           <input type="text" readonly class="form-control-plaintext text-info mb-2" id="calories" name="calories" value="0.00">
