--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -60,6 +60,11 @@
                 href="{{ url_for('editbowl',bowl_id=b.id) }}"
                 >Edit</a
               >
+              <a
+                class="btn btn-success btn-sm text-uppercase js-scroll-trigger"
+                href="{{ url_for('bowlrecipe',bowl_id=b.id) }}"
+                >Recipe</a
+              >
             </div>
             {%endif%} {%endfor%}
           </div>
@@ -81,6 +86,11 @@
                 href="{{ url_for('editbowl',bowl_id=b.id) }}"
                 >Edit</a
               >
+              <a
+                class="btn btn-success btn-sm text-uppercase js-scroll-trigger"
+                href="{{ url_for('bowlrecipe',bowl_id=b.id) }}"
+                >Recipe</a
+              >
             </div>
             {%endif%} {%endfor%}
           </div>
@@ -101,6 +111,11 @@
                 class="btn btn-info btn-sm text-uppercase js-scroll-trigger"
                 href="{{ url_for('editbowl',bowl_id=b.id) }}"
                 >Edit</a
+              >
+              <a
+                class="btn btn-success btn-sm text-uppercase js-scroll-trigger"
+                href="{{ url_for('bowlrecipe',bowl_id=b.id) }}"
+                >Recipe</a
               >
             </div>
             {%endif%} {%endfor%}
