style: remove spaces in list

--- a/templates/bowlRecipe.html
+++ b/templates/bowlRecipe.html
@@ -68,17 +68,9 @@
 
           <li>
             <div class="input-group">
-              <span class="col-form-label" >{{ i.name }}:</label>
-              <label id="portion" name="{{i.portionSize}}" class="col-form-label cups">{{i.portionSize}}</label>
-<!--               <input
-                type="text"
-                id="portion"
-                name="portion"
-                readonly
-                class="form-control-plaintext text-info"
-                value="{{ i.portionSize }}"
-              /> -->
-              <span class="col-form-label">cups</span>
+              <span>{{ i.name }}:</label>
+              <label id="portion" name="{{i.portionSize}}" class="cups">{{i.portionSize}}</label>
+              <span>cups</span>
             </div>
           </li>
 
