--- a/templates/makeBowl.html
+++ b/templates/makeBowl.html
@@ -5,7 +5,7 @@
     rel="stylesheet"
   />
   </head>
-    <form id="regForm" action="{{ url_for('makebowl') }}" method="post" >
+    <form id="regForm" action="{{ url_for('makebowl') }}" method="post" class="was-validated is-valid" >
       <h1>Make a new bowl</h1>
       <h5>Nutrition Facts</h5>
       <div id="console-ingredients" class="input-group col-auto mb-2 bg-light">
@@ -249,21 +249,28 @@
           </div>
           <br>
         </div>
-        <p>
+        <div class="input-group mb-4"  style="position: relative">
           <input
+            type="text"
+            class="form-control"
+            id="bowl_name"
             placeholder="Bowl's name..."
-            oninput="this.className = ''"
             name="bowl_name"
-          />
-        </p>
-        <p>
+            required
+          >
+          <div class="invalid-tooltip">
+            Please put name to the bowl.
+          </div>
+        </div>
+
+        <div class="mb-3">
           <label for="type">Select a type:</label>
           <select class="form-control" id="type" name="type">
             <option>Vegan</option>
             <option>Vegetarian</option>
             <option>Contains meat</option>
           </select>
-        </p>
+        </div>
       </div>
       <div style="overflow:auto;">
         <div style="float:right;">
@@ -331,30 +338,30 @@
       }
 
       function validateForm() {
-        // This function deals with validation of the form fields
-        var x,
-          y,
-          i,
-          valid = true;
-        x = document.getElementsByClassName("tab");
-        y = x[currentTab].getElementsByTagName("input");
-        // A loop that checks every input field in the current tab:
-        for (i = 0; i < y.length; i++) {
-          // If a field is empty...
-          if (y[i].value == "") {
-            // add an "invalid" class to the field:
-            y[i].className += " invalid";
-            // and set the current valid status to false
-            valid = false;
-          }
-        }
-        // If the valid status is true, mark the step as finished and valid:
-        if (valid) {
-          document.getElementsByClassName("step")[currentTab].className +=
-            " finish";
-        }
-        return valid; // return the valid status
-      }
+  // This function deals with validation of the form fields
+  var x,
+    y,
+    i,
+    valid = true;
+  x = document.getElementsByClassName("tab");
+  y = x[currentTab].getElementsByTagName("input");
+  // A loop that checks every input field in the current tab:
+  for (i = 0; i < y.length; i++) {
+    // If a field is empty...
+    if (y[i].value == "") {
+      // add an "invalid" class to the field:
+      y[i].className += " is-invalid";
+      // and set the current valid status to false
+      valid = false;
+    }
+  }
+  // If the valid status is true, mark the step as finished and valid:
+  if (valid) {
+    document.getElementsByClassName("step")[currentTab].className += " finish";
+  }
+  return valid; // return the valid status
+}
+
 
       function fixStepIndicator(n) {
         // This function removes the "active" class of all steps...
