--- a/templates/main.html
+++ b/templates/main.html
@@ -81,5 +81,6 @@
     <!-- Custom scripts for this template -->
     <script src="{{url_for('static',filename='js/styles.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/nutrition_data.js')}}"></script>
+    <script src="{{url_for('static',filename='js/input_validation.js')}}"></script>
   </body>
 </html>
