--- a/templates/makeBowl.html
+++ b/templates/makeBowl.html
@@ -271,15 +271,20 @@
             <option>Contains meat</option>
           </select>
         </div>
-      </div>
-      <div style="overflow:auto;">
-        <div style="float:right;">
-          <button type="button" id="prevBtn" onclick="nextPrev(-1)">
-            Previous
-          </button>
-          <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+        <div id="error" name="error" class="text-danger p-2">
+
         </div>
       </div>
+      <div class="input-group justify-content-center">
+      <div style="overflow:auto;" >
+        <div class="float-right" >
+          <button type="button" id="prevBtn" onclick="nextPrev(-1)" class="btn btn-info">
+            Previous
+          </button>
+          <button type="button" id="nextBtn" onclick="nextPrev(1)" class="btn btn-success">Next</button>
+        </div>
+      </div>
+    </div>
       <!-- Circles which indicates the steps of the form: -->
       <div style="text-align:center;margin-top:40px;">
         <span class="step"></span>
@@ -310,7 +315,10 @@
           document.getElementById("prevBtn").style.display = "inline";
         }
         if (n == x.length - 1) {
-          document.getElementById("nextBtn").innerHTML = "Submit";
+
+           document.getElementById("nextBtn").innerHTML = "Submit";
+
+
         } else {
           document.getElementById("nextBtn").innerHTML = "Next";
         }
@@ -319,10 +327,16 @@
       }
 
       function nextPrev(n) {
+
         // This function will figure out which tab to display
         var x = document.getElementsByClassName("tab");
         // Exit the function if any field in the current tab is invalid:
-        if (n == 1 && !validateForm()) return false;
+        if (n==1 && document.getElementById("nextBtn").innerHTML == "Submit" && !validateForm()) {
+          return false;
+          }
+        else{
+          document.getElementById("error").innerHTML="";
+        }
         // Hide the current tab:
         x[currentTab].style.display = "none";
         // Increase or decrease the current tab by 1:
@@ -330,36 +344,22 @@
         // if you have reached the end of the form...
         if (currentTab >= x.length) {
           // ... the form gets submitted:
-          document.getElementById("regForm").submit();
-          return false;
+            document.getElementById("regForm").submit();
+            return false;
+
         }
         // Otherwise, display the correct tab:
         showTab(currentTab);
       }
 
-      function validateForm() {
-  // This function deals with validation of the form fields
-  var x,
-    y,
-    i,
-    valid = true;
-  x = document.getElementsByClassName("tab");
-  y = x[currentTab].getElementsByTagName("input");
-  // A loop that checks every input field in the current tab:
-  for (i = 0; i < y.length; i++) {
-    // If a field is empty...
-    if (y[i].value == "") {
-      // add an "invalid" class to the field:
-      y[i].className += " is-invalid";
-      // and set the current valid status to false
-      valid = false;
-    }
-  }
+  function validateForm() {
+    // This function deals with validation of the form fields
+
   // If the valid status is true, mark the step as finished and valid:
-  if (valid) {
+  if (inputValidation()) {
     document.getElementsByClassName("step")[currentTab].className += " finish";
   }
-  return valid; // return the valid status
+  return inputValidation(); // return the valid status
 }
 
 
